@@ -1,3 +1,7 @@
+Thu May 17 17:35:04 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* eval.c (rb_call0): address of local_vars might change during eval.
+
 Thu May 17 07:30:15 2001  Akinori MUSHA  <knu@iDaemons.org>
 
 	* ext/md5/md5.txt, ext/md5/md5.txt.jp: s/SuperClass/Superclass/.
